rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__confirmation_many_line_message_truncates_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                        ┌Undo──────────────────────────────────────────────────────────────────┐                        ",
        "                        │18 of 20 rows can be undone, 2 blocked:                               │                        ",
        "                        │  - row 1: destination already exists                                 │                        ",
        "                        │  - row 2: destination already exists                                 │                        ",
        "                        │  - row 3: destination already exists                                 │                        ",
        "                        │  - row 4: destination already exists                                 │                        ",
        "                        │  - row 5: destination already exists                                 │                        ",
        "                        │  - row 6: destination already exists                                 │                        ",
        "                        │  - row 7: destination already exists                                 │                        ",
        "                        │  - row 8: destination already exists                                 │                        ",
        "                        │  - row 9: destination already exists                                 │                        ",
        "                        │  - row 10: destination already exists                                │                        ",
        "                        │  - row 11: destination already exists                                │                        ",
        "                        │... 7 more                                                            │                        ",
        "                        │                                                                      │                        ",
        "                        │                           [*OK*]  [Cancel]                           │                        ",
        "                        │                                                                      │                        ",
        "                        └──────────────────────────────────────────────────────────────────────┘                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 29, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: DIM,
        x: 35, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 25, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 26, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 26, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 58, y: 26, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 60, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 26, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 27, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
